Fixed scrollbar

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -8154,15 +8154,15 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
  * Scrollbar.
  */
 ::-webkit-scrollbar {
-    width: 0px; }
+    width: 5px; }
 
 ::-webkit-scrollbar-track {
     background-color: white; }
 
 ::-webkit-scrollbar-thumb {
-    background-color: rgba(255,64,129,1);
+    background-color: rgba(61,81,181,1);
     border-radius: 2px; }
 
 ::selection{
-    background-color: rgba(255,64,129,1);
+    background-color: rgba(61,81,181,1);
     color: white; }
